--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,9 @@ h1{
 }
 #menu li{
 	display: inline-block;
-	margin: 0 100px 0 80px;
+	margin: 0 80px 25px 80px;
 	border-right: 2px solid black ;
+    font-size: 20px;
 }
 
 #menu li a{
@@ -49,5 +50,9 @@ h2{
     font-size: 25px;
     padding-left: 10px;
     font-weight: bold;
-    
+}
+
+.float img{
+    width: 250px;
+    height: 250px;
 }
