--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,13 @@ h2{
     font-weight: bold;
 }
 
-.float {
+#star {
     width: 250px;
     height: 250px;
+}
+
+.clearfix::after {
+	content:"";
+	display:block;
+	clear: both;
 }
