--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,15 @@ h2{
 p{
 	padding-left: 10px;
 }
+
+h3{
+	font-size: 20px;
+    padding-left: 10px;
+    font-weight: bold;
+	margin-top: 25px;
+}
+
+ul{
+	padding-left: 25px;
+	list-style-type: disc;
+}
