--- a/css/styles.css
+++ b/css/styles.css
@@ -78,4 +78,29 @@ h3{
 ul{
 	padding-left: 25px;
 	list-style-type: disc;
+	margin-top: 25px;
+}
+
+form{
+	margin: 10px;
+	padding: 30px 20px 20px 20px;
+	border: 1px solid black;
+}
+
+input[ type="text"], input[ type="email"]  {
+	width: 100%;
+}
+textarea {
+	width: 100%;
+	height: 100px;
+	resize: vertical;
+	margin-bottom: 10px;
+}
+
+.formp {
+	margin-bottom: 10px;
+}
+
+input[ type="submit"] {
+	margin-top: 20px;
 }
