--- a/css/styles.css
+++ b/css/styles.css
@@ -67,7 +67,8 @@ h2{
 }
 
 p{
-	padding: 20px 20px 10px 0;
+	padding: 20px 20px 10px 10px;
+	line-height: 1.3;
 }
 
 h3{
@@ -113,8 +114,7 @@ input[ type="submit"] {
 	padding: 10px;
 	cursor: pointer;
 }
-footer{
+footer {
 	padding: 25px;
 	text-align: right;
-
 }
